--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gerador de Imagens de Anime</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Modo de Manutenção</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f1f1f1;
+            text-align: center;
+            padding: 100px;
+        }
+
+        h1 {
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 18px;
+            margin-top: 10px;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Gerador de Imagens de Anime</h1>
-        <div class="tabs">
-            <button id="randomTab" class="tabButton active">Aleatório</button>
-            <button id="girlTab" class="tabButton">Meninas</button>
-            <button id="boyTab" class="tabButton">Meninos</button>
-        </div>
-        <button id="generateButton">Gerar Imagem</button>
-        <div class="imageContainer">
-            <img id="animeImage" src="" alt="Imagem de Anime">
-            <a id="downloadLink" style="display: none;" download="anime_profile.png">Baixar Imagem</a>
-        </div>
-    </div>
-    <script src="script.js"></script>
+    <h1>O site está em manutenção</h1>
+    <p>Nossos serviços estão temporariamente indisponíveis enquanto realizamos algumas melhorias.</p>
+    <img src="maintenance-image.jpg" alt="Imagem de Manutenção">
 </body>
 </html>
