--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>YouTube Clone</title>
+    <title>Meu Vídeo Site</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
-        <h1>YouTube Clone</h1>
+        <h1>Meu Vídeo Site</h1>
     </header>
     <main>
-        <div id="video-container"></div>
+        <div id="video-container">
+            <!-- Aqui serão exibidos os vídeos -->
+        </div>
     </main>
     <footer>
-        <p>&copy; 2023 YouTube Clone</p>
+        <p>&copy; 2023 Meu Vídeo Site</p>
     </footer>
-    <script src="https://www.google.com/jsapi"></script>
     <script src="script.js"></script>
 </body>
 </html>
