--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meu Vídeo Site</title>
+    <title>Chat Online</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Meu Vídeo Site</h1>
+        <h1>Chat Online</h1>
     </header>
     <main>
-        <div id="video-container">
-            <!-- Aqui serão exibidos os vídeos -->
+        <div id="chat-container">
+            <div id="message-box"></div>
+            <input type="text" id="message-input" placeholder="Digite sua mensagem">
+            <button id="send-button">Enviar</button>
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 Meu Vídeo Site</p>
+        <p>&copy; 2023 Chat Online</p>
     </footer>
     <script src="script.js"></script>
 </body>
