--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Chat Online</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
@@ -18,6 +17,7 @@
     <footer>
         <p>&copy; 2023 Chat Online</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@openai/chatgpt@0.2.0/dist/index.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
