--- a/index.html
+++ b/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Gerador de Fotos de Anime</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Exemplo de Site</title>
 </head>
 <body>
-    <header>
-        <h1>Gerador de Fotos de Anime</h1>
-    </header>
-    <main>
-        <div id="image-container">
-            <img id="anime-image" src="" alt="Imagem de Anime">
-            <button id="generate-button">Gerar Nova</button>
-        </div>
-        <div id="user-profile" style="display: none;">
-            <h2>Perfil do Usuário</h2>
-            <p>Usuário: <span id="username"></span></p>
-            <p>Email: <span id="email"></span></p>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2023 Gerador de Fotos de Anime</p>
-    </footer>
+    <div class="container">
+        <h1>Meu Site Incrível</h1>
+        <p id="texto">Clique no botão para mudar o texto!</p>
+        <button id="botao">Clique Aqui</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
